[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "icu-resource-allocation"
version = "1.0.0"
description = "ICU Resource Allocation OpenEnv - Real-world hospital ICU agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "pydantic==2.9.0",
    "openai==1.51.0",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
name = "icu-resource-allocation"
version = "1.0.0"
entry_point = "server.app:main"
server_entry_point = "server.app:main"

[tool.uv]
dev-dependencies = []
